--- a/Take Flight/style.css
+++ b/Take Flight/style.css
@@ -1,3 +1,39 @@
+body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #1c1c1c;
+}
+
+nav {
+    background-color: #1c1c1c;
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #f8f1f1;
+    padding: 10px;
+    margin: 0 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-family: 'Raleway', sans-serif; /* Apply Raleway font */
+}
+
+nav a img {
+    width: 200px;
+    margin-bottom: 5px;
+}
+
+nav a:hover {
+    background-color: #555;
+}
+
 /* Add some basic styling to labels and inputs */
 label {
     font-weight: bold;
@@ -31,11 +67,11 @@ form {
     height: 1000vh; 
     margin: 0;
     padding: 0;
-    border: 1px solid #ccc;
+    border: 1px solid #1c1c1c;
     border-radius: 5px;
     background-color: #1c1c1c;
     color: #ffffff;
-    font-size: 120%; 
+    font-size: 150%; 
     font-family: 'Raleway', sans-serif;
 }
 
@@ -49,27 +85,29 @@ p {
     margin-left: 2%;
 }
 
-
 .header {
-    display: inline-block; 
-    vertical-align: middle;
-    margin-right: 20px; 
-}
-  
+    display: flex;
+    align-items: center;
+    margin-left: 60px; /* Adjust the margin-left value as needed */
 
-h1 {
-    font-weight: bold;
-    margin-top: 2%; 
-    margin-bottom: 2%; 
-    color: ffffff;
-    font-size: 120%; 
-    margin-left: 2%;
 }
-  
+
+.header img {
+    width: 130px; /* Adjust the width as needed */
+    height: auto;
+    margin-left: 40px; /* Equal margin between the images and the heading */
+}
+
+.header h1 {
+    color: #f8f1f1;
+    font-size: 450%; 
+    font-family: 'Raleway', sans-serif;
+    margin-left: 40px; /* Equal margin between the images and the heading */
+}
 img {
     width: 100px; 
     height: auto; 
-}  
+}
 
 .divider {
     border-top: 4px solid #ffeeaa; 
@@ -77,4 +115,3 @@ img {
     margin-bottom: 20px;
 }
 
-  
