--- a/Take Flight/style.css
+++ b/Take Flight/style.css
@@ -34,6 +34,20 @@ nav a:hover {
     background-color: #555;
 }
 
+.flex-container {
+    display: flex;
+    justify-content: space-around; /* Adjust as needed */
+    align-items: center; /* Center vertically */
+    padding: 10px; /* Adjust spacing as needed */
+    background-color: #1c1c1c; /* Set background color */
+}
+
+nav a item {
+    display: flex; /* Use flexbox for the inner layout */
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; /* Center items vertically */
+}
+
 /* Add some basic styling to labels and inputs */
 label {
     font-weight: bold;
@@ -113,5 +127,11 @@ img {
     border-top: 4px solid #ffeeaa; 
     margin-top: 20px; 
     margin-bottom: 20px;
+}
+
+.btn.submit-form {
+    width: 293px;
+    height: 78px;
+    /* Add other styling as needed */
 }
 
