--- a/Take Flight/style.css
+++ b/Take Flight/style.css
@@ -57,6 +57,7 @@ label {
 }
 
 input[type="text"],
+input[type="password"],
 input[type="number"] {
     width: 75%;
     padding: 2%; 
@@ -118,6 +119,14 @@ p {
     font-family: 'Raleway', sans-serif;
     margin-left: 40px; /* Equal margin between the images and the heading */
 }
+
+.header h2 {
+    color: #f8f1f1;
+    font-size: 450%; 
+    font-family: 'Raleway', sans-serif;
+    margin-left: 190px; /* Equal margin between the images and the heading */
+}
+
 img {
     width: 100px; 
     height: auto; 
@@ -135,3 +144,8 @@ img {
     /* Add other styling as needed */
 }
 
+.btn.create-account {
+    width: 293px;
+    height: 78px;
+    /* Add other styling as needed */
+}
